--- a/Movied/app/src/main/res/values/colors.xml
+++ b/Movied/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_dark">#15141F</color>
+    <color name="green_500">#10AF87</color>
+    <color name="red">#d63031</color>
+    <color name="grey_9C">#9C9C9C</color>
+    <color name="grey_9C_10">#1A9C9C9C</color>
+    <color name="blue_facebook">#385C8E</color>
 </resources>
