create bottom navigation

--- a/Movied/app/src/main/res/values/colors.xml
+++ b/Movied/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="grey_9C">#9C9C9C</color>
     <color name="grey_9C_10">#1A9C9C9C</color>
     <color name="blue_facebook">#385C8E</color>
+    <color name="blue_dark_400">#211F30</color>
 </resources>
