--- a/Movied/app/src/main/res/values/colors.xml
+++ b/Movied/app/src/main/res/values/colors.xml
@@ -12,6 +12,9 @@
     <color name="red">#d63031</color>
     <color name="grey_9C">#9C9C9C</color>
     <color name="grey_9C_10">#1A9C9C9C</color>
+    <color name="grey_9C_50">#809C9C9C</color>
+    <color name="black_40">#66000000</color>
+    <color name="black_60">#99000000</color>
     <color name="blue_facebook">#385C8E</color>
     <color name="blue_dark_400">#211F30</color>
 </resources>
