--- a/Movied/app/src/main/res/values-night/themes.xml
+++ b/Movied/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,16 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+    </style>
+
+    <style name="CustomTabLayoutTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ChipTabLayoutMovie" parent="Widget.Design.TabLayout">
+        <item name="tabBackground">@drawable/selector_tab_movie</item>
     </style>
 </resources>
