--- a/Movied/app/src/main/res/layout/item_movie_1.xml
+++ b/Movied/app/src/main/res/layout/item_movie_1.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
+    android:background="?selectableItemBackgroundBorderless"
+    android:focusable="true"
     android:paddingStart="8dp"
     android:paddingEnd="8dp">
 
