--- a/Movied/app/src/main/res/values/colors.xml
+++ b/Movied/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="blue_dark_400">#211F30</color>
     <color name="white_50">#80FFFFFF</color>
     <color name="white_BBB">#BBBBBB</color>
+    <color name="grey_76">#767680</color>
 </resources>
