--- a/Movied/app/src/main/res/values/themes.xml
+++ b/Movied/app/src/main/res/values/themes.xml
@@ -24,4 +24,9 @@
     <style name="ChipTabLayoutMovie" parent="Widget.Design.TabLayout">
         <item name="tabBackground">@drawable/selector_tab_movie</item>
     </style>
+
+    <style name="MaterialButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="backgroundTint">@color/color_states_materialbutton</item>
+    </style>
+
 </resources>
