--- a/Movied/app/src/main/res/layout/activity_login.xml
+++ b/Movied/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
         android:layout_width="match_parent"
         android:padding="24dp"
+        android:fillViewport="true"
         android:layout_height="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
