--- a/Movied/app/src/main/res/values-night/themes.xml
+++ b/Movied/app/src/main/res/values-night/themes.xml
@@ -24,4 +24,10 @@
     <style name="ChipTabLayoutMovie" parent="Widget.Design.TabLayout">
         <item name="tabBackground">@drawable/selector_tab_movie</item>
     </style>
+
+    <style name="DialogStyle" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+    </style>
 </resources>
