--- a/Movied/app/src/main/res/values/themes.xml
+++ b/Movied/app/src/main/res/values/themes.xml
@@ -29,4 +29,11 @@
         <item name="backgroundTint">@color/color_states_materialbutton</item>
     </style>
 
+    <style name="BottomSheetDialogStyle" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+    </style>
+
+
 </resources>
