--- a/Movied/app/src/main/res/layout/activity_login.xml
+++ b/Movied/app/src/main/res/layout/activity_login.xml
@@ -94,6 +94,7 @@
                 android:hint="@string/enter_your_email"
                 android:textColorHint="@color/grey_9C"
                 android:textSize="14sp"
+                android:textColor="@color/white"
                 android:background="@drawable/rounded_edittext"
                 app:layout_constraintTop_toBottomOf="@+id/tv_label_email"
                 app:layout_constraintStart_toStartOf="@+id/tv_label_email"
@@ -120,6 +121,7 @@
                 android:paddingEnd="16dp"
                 android:inputType="textPassword"
                 android:textSize="14sp"
+                android:textColor="@color/white"
                 android:hint="@string/enter_your_password"
                 android:textColorHint="@color/grey_9C"
                 android:background="@drawable/rounded_edittext"
@@ -138,6 +140,15 @@
                 app:layout_constraintBottom_toBottomOf="@+id/edt_password"
                 app:layout_constraintEnd_toEndOf="@+id/edt_password"
                 app:layout_constraintTop_toTopOf="@+id/edt_password" />
+
+            <TextView
+                android:id="@+id/tv_label_error_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="@+id/edt_password"
+                app:layout_constraintStart_toStartOf="@+id/edt_password"
+                app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
             <com.google.android.material.button.MaterialButton
                 style="@style/MaterialButtonStyle"
