--- a/Movied/app/src/main/res/layout/activity_register.xml
+++ b/Movied/app/src/main/res/layout/activity_register.xml
@@ -93,6 +93,7 @@
                 android:hint="@string/enter_your_username"
                 android:textColorHint="@color/grey_9C"
                 android:textSize="14sp"
+                android:textColor="@color/white"
                 android:background="@drawable/rounded_edittext"
                 app:layout_constraintTop_toBottomOf="@+id/tv_label_username"
                 app:layout_constraintStart_toStartOf="@+id/tv_label_username"
@@ -120,6 +121,7 @@
                 android:hint="@string/enter_your_email"
                 android:textColorHint="@color/grey_9C"
                 android:textSize="14sp"
+                android:textColor="@color/white"
                 android:background="@drawable/rounded_edittext"
                 app:layout_constraintTop_toBottomOf="@+id/tv_label_email"
                 app:layout_constraintStart_toStartOf="@+id/tv_label_email"
@@ -147,6 +149,7 @@
                 android:inputType="textPassword"
                 android:textSize="14sp"
                 android:hint="@string/enter_your_password"
+                android:textColor="@color/white"
                 android:textColorHint="@color/grey_9C"
                 android:background="@drawable/rounded_edittext"
                 app:layout_constraintTop_toBottomOf="@+id/tv_label_password"
@@ -164,6 +167,15 @@
                 app:layout_constraintBottom_toBottomOf="@+id/edt_password"
                 app:layout_constraintEnd_toEndOf="@+id/edt_password"
                 app:layout_constraintTop_toTopOf="@+id/edt_password" />
+
+            <TextView
+                android:id="@+id/tv_label_error_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="@+id/edt_password"
+                app:layout_constraintStart_toStartOf="@+id/edt_password"
+                app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
             <TextView
                 android:id="@+id/tv_label_confirm_password"
@@ -185,6 +197,7 @@
                 android:inputType="textPassword"
                 android:textSize="14sp"
                 android:hint="@string/enter_your_password"
+                android:textColor="@color/white"
                 android:textColorHint="@color/grey_9C"
                 android:background="@drawable/rounded_edittext"
                 app:layout_constraintTop_toBottomOf="@+id/tv_label_confirm_password"
@@ -202,6 +215,16 @@
                 app:layout_constraintBottom_toBottomOf="@+id/edt_confirm_password"
                 app:layout_constraintEnd_toEndOf="@+id/edt_confirm_password"
                 app:layout_constraintTop_toTopOf="@+id/edt_confirm_password" />
+
+            <TextView
+                android:id="@+id/tv_label_error_confirm_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="@+id/edt_confirm_password"
+                app:layout_constraintStart_toStartOf="@+id/edt_confirm_password"
+                app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password" />
+
 
             <com.google.android.material.button.MaterialButton
                 style="@style/MaterialButtonStyle"
