--- a/Movied/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/Movied/app/src/main/res/layout/fragment_edit_profile.xml
@@ -112,6 +112,15 @@
             app:layout_constraintEnd_toEndOf="@+id/edt_password"
             app:layout_constraintTop_toTopOf="@+id/edt_password" />
 
+        <TextView
+            android:id="@+id/tv_label_error_password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            app:layout_constraintEnd_toEndOf="@+id/edt_password"
+            app:layout_constraintStart_toStartOf="@+id/edt_password"
+            app:layout_constraintTop_toBottomOf="@+id/edt_password" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_update"
             android:layout_width="0dp"
